app/game-2048-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-2048
  labels:
    app: game-2048
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
      - name: game-2048
        image: alexwhen/docker-2048:latest
        ports:
        - containerPort: 80
