app/service-2048.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
  labels:
    app: game-2048
spec:
  selector:
    app: game-2048
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
